--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-route-resolver",
   "version": "0.0.2-SNAPSHOT",
-  "description": "",
+  "description": "Resolver simplified of routes for Express",
   "main": "index.js",
   "scripts": {
     "test": "mocha test/ --opts test/mocha.opts"
