--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-route-resolver",
-  "version": "0.0.3",
+  "version": "0.0.4-SNAPSHOT",
   "description": "Resolver simplified of routes for Express",
   "main": "index.js",
   "scripts": {
